[package]
name = "screeps-async-macros"
description = "Macros for screeps-async"
repository = "https://github.com/rustyscreeps/screeps-async"
homepage = "https://github.com/rustyscreeps/screeps-async"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
