[package]
name = "screeps-async"
description = "Tick-aware Async runtime for Screeps"
repository = "https://github.com/scottbot95/screeps-async"
homepage = "https://github.com/scottbot95/screeps-async"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
screeps-async-macros = { path = "../screeps-async-macros" }

crossbeam = "0.8"
futures = "0.3"
screeps-game-api = "0.20.1"


[dev-dependencies]
rstest = "0.18.2"