[package]
name = "screeps-async"
description = "Tick-aware Async runtime for Screeps"
repository = "https://github.com/rustyscreeps/screeps-async"
homepage = "https://github.com/rustyscreeps/screeps-async"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.md"

[dependencies]
screeps-async-macros = { version = "0.1.2", path = "../screeps-async-macros" }

async-task = "4.7"
flume = { version = "0.11", default-features = false }

screeps-game-api = "0.20.1"

[dev-dependencies]
rstest = "0.18.2"
